# teste-garage-ai-sales-insights

./: .env  .gitignore  README.md  alembic.ini  cloudflare-api-key.txt  pyproject.toml  runtime.env.example
demo/: README.md  http_client.py  sales_insights.py  top_products.py
docs/decisions/: abstracao-da-persistencia-relacional.md  abstracao-das-etapas-nao-deterministicas.md  algebra-analitica-de-vendas.md  comparacao-de-vendas-com-agregacao-condicional-e-cursor.md  consultando-db-com-linguagem-natural.md  get-top-products-independente-de-llm.md  uso-restrito-do-langchain-no-planejamento-de-insights.md  validacao-deterministica-de-datas-com-reparo-limitado.md  validacao-deterministica-de-filtros-com-reparo-limitado.md
migrations/: README.md  env.py
migrations/versions/: 20260717_0001_initial_schema.py  20260717_0001_initial_schema_and_seed.py  20260717_0002_analytical_order_model.py  20260717_0003_remove_analytical_order_model.py
scripts/: __init__.py  bootstrap.py  evaluate_sales_insights.py  migrate.py  run-api.ps1  run.py  run_get_sales_insights_efficacy.py  seed.py  verify.py
src/garage_sales/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  runtime.py
src/garage_sales/adapters/: __init__.py
src/garage_sales/adapters/http/: __init__.py  api.py  schemas.py
src/garage_sales/adapters/langchain/: __init__.py  chat_models.py  sales_insights.py
src/garage_sales/application/: __init__.py  models.py  ports.py  queries.py  query_execution.py  synthesis.py  use_cases.py
src/garage_sales/domain/: __init__.py  analytics.py  criteria.py  entities.py  ports.py
src/garage_sales/infrastructure/: __init__.py
src/garage_sales/infrastructure/sqlalchemy/: __init__.py  analytics.py  database.py  migrations.py  models.py  repositories.py  unit_of_work.py
tests/: conftest.py  test_advanced_sales_analytics.py  test_application_ports.py  test_chat_models.py  test_cli.py  test_config.py  test_demo_http_client.py  test_get_sales_insights.py  test_get_top_products_use_case.py  test_http_api.py  test_migrations.py  test_pluggable_persistence.py  test_pluggable_relational_persistence.py  test_runtime.py  test_sales_comparison_pagination.py  test_sales_insights_efficacy_script.py  test_sales_insights_evaluation.py  test_seeds.py  test_sqlalchemy_repositories.py
