[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "garage-ai-sales-insights"
version = "0.1.0"
description = "Camada de consultas para bancos relacionais com contratos e SQLAlchemy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.18.5",
    "fastapi==0.139.0",
    "httpx==0.28.1",
    "langchain-core==1.4.9",
    "pydantic==2.13.4",
    "SQLAlchemy==2.0.51",
    "uvicorn==0.51.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]==3.3.4"]
mysql = ["PyMySQL==1.2.0"]
dev = [
    "httpx2==2.7.0",
    "mypy==1.20.2",
    "pytest==8.4.2",
    "ruff==0.15.22",
]

[project.scripts]
garage-sales = "garage_sales.cli:main"
garage-sales-api = "garage_sales.runtime:run"
garage-sales-migrate = "garage_sales.infrastructure.sqlalchemy.migrations:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
garage_sales = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"scripts/bootstrap.py" = ["UP036"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests", "scripts"]
